--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/material": "^6.3.1",
     "antd": "^5.23.1",
     "axios": "^1.7.9",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "jspdf-customfonts": "0.0.4-rc.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
